2.2: 6/??/2024
	* Fixed the size specified of the Zip64 extra-field.

2.1: 6/14/2024
	* Fixed a problem when reading file headers and getting null twice.
	* Fixed a possible problem when the internal buffer sizes are increasing.
	* Added more Zip64 support around central-directory entries and the offset and disk-number.
	* Improved test coverage which help catch some possible issues that were addressed.

2.0: 6/13/2024
	* Fixed problem with buffering that would generate an improper or unnecessary data-descriptor.
	* Fixed problem when finishing Zip output file without any data.
	* Removed the ZipVersion which seemed artificial.  Replaced with major/minor numbers.
	* Renamed some methods around the version-needed and version-made getters and setters.
	* Renamed the ZipFileOutput.enableBufferedOutput() method to enableFileBuffering().
	* Changed some of the sizes returned to be longs to better handle 32-bit numbers.
	* Changed (and added) some fields in the ZipCentralFileEntry to support Zip64 widths.
	* Added some more fields to the ZipCentralDirectoryEndInfo class to support Zip64.
	* Added some fields to the ZipCentralFileEntry to support Zip64 widths. 
	* Added some methods to extract the ZipFileHeader and the ZipCentralDirectoryFileInfo fields from a File.
	* Added some support for Zip64 extra fields.
	* Added Zip64 central-directory end support and Zip64 end-locator object support.
	* Added iterators for the ZipFileHeader and ZipCentralDirectoryFileEntry sections.
	* Renamed the ZipFileInput.readFileData(File) methods to be readFileDataToFile().
	* Added support for file-header and directory-file-entry iterators.

1.1: 5/23/2024
	* Fixed some of the logic to allow us to control all bytes in the output Zip.
	* Fixed some of the logic which determined if a data-descriptor was necessary.
	* Added ZipCentralDirectoryEndInfo to be able to control the end structure.
	* Added ZipFileCopy example program which writes identical Zip files.